--- a/client/genjs.css
+++ b/client/genjs.css
@@ -1,5 +1,5 @@
 html, body {
-    height: 100%;
+    height: 95%;
 }
 
 .header {
@@ -27,11 +27,14 @@ html, body {
   }
 }
 
-.row {
+.row-fluid {
 	position: relative;
+	padding-bottom: 0px;
+	overflow: hidden;
 	/*margin-left: -10px;*/
 }
 .fill { 
 	height: 100%;
     min-height: 100%;
 }
+
